--- a/Android/app/src/main/res/layout/activity_home_page.xml
+++ b/Android/app/src/main/res/layout/activity_home_page.xml
@@ -4,108 +4,120 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_constraintVertical_bias="0.79"
     tools:context="baseballRecruitment.jd.HomePage">
 
     <TextView
         android:id="@+id/home_page_title"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
         android:text="Home Page"
-        android:textColor="@android:color/holo_blue_dark"
-        android:textSize="18sp"
+        android:textColor="@color/colorAccent"
+        android:textSize="@dimen/hp_button_fontsize"
         android:textStyle="bold"
         android:typeface="monospace"
         app:layout_constraintBottom_toTopOf="@+id/my_calendar_button"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.55" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/my_calendar_button"
-        style="@android:style/Widget.Button.Inset"
-        android:layout_width="368dp"
+        style="@style/hp_button_style"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="415dp"
-        android:background="@android:color/holo_blue_dark"
+        android:layout_marginLeft="@dimen/hp_button_margin_h"
+        android:layout_marginRight="@dimen/hp_button_margin_h"
+        android:background="@color/colorAccent"
         android:onClick="mycalendar"
         android:text="My Calendar"
         android:textAlignment="center"
-        android:textSize="16sp"
+        android:textSize="@dimen/hp_button_fontsize"
         android:textStyle="bold"
         android:typeface="monospace"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:fontFamily="monospace"
+        app:layout_constraintVertical_chainStyle="packed"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/my_watchlist_button"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
     <Button
         android:id="@+id/my_watchlist_button"
-        style="@android:style/Widget.Button.Inset"
-        android:layout_width="368dp"
+        style="@style/hp_button_style"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@android:color/holo_blue_dark"
+        android:layout_marginTop="@dimen/hp_button_margin_v"
+        android:layout_marginLeft="@dimen/hp_button_margin_h"
+        android:layout_marginRight="@dimen/hp_button_margin_h"
+        android:background="@color/colorAccent"
         android:onClick="watchlist"
         android:text="My Watchlist"
-        android:textSize="16sp"
+        android:textSize="@dimen/hp_button_fontsize"
         android:textStyle="bold"
         android:typeface="monospace"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:fontFamily="monospace"
+        app:layout_constraintBottom_toTopOf="@+id/top_50_button"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/my_calendar_button"
-        app:layout_constraintVertical_bias="0.068" />
+        app:layout_constraintTop_toBottomOf="@+id/my_calendar_button" />
 
     <Button
         android:id="@+id/top_50_button"
-        style="@android:style/Widget.Button.Inset"
-        android:layout_width="368dp"
+        style="@style/hp_button_style"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@android:color/holo_blue_dark"
+        android:layout_marginTop="@dimen/hp_button_margin_v"
+        android:layout_marginLeft="@dimen/hp_button_margin_h"
+        android:layout_marginRight="@dimen/hp_button_margin_h"
+        android:background="@color/colorAccent"
         android:onClick="top50"
         android:text="Top 50"
-        android:textSize="16sp"
+        android:textSize="@dimen/hp_button_fontsize"
         android:textStyle="bold"
         android:typeface="monospace"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:fontFamily="monospace"
+        app:layout_constraintBottom_toTopOf="@+id/map_button"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/my_watchlist_button"
-        app:layout_constraintVertical_bias="0.105" />
+        app:layout_constraintTop_toBottomOf="@+id/my_watchlist_button" />
 
     <Button
         android:id="@+id/map_button"
-        style="@android:style/Widget.Button.Inset"
-        android:layout_width="368dp"
-        android:layout_height="48dp"
-        android:background="@android:color/holo_blue_dark"
+        style="@style/hp_button_style"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/hp_button_margin_v"
+        android:layout_marginLeft="@dimen/hp_button_margin_h"
+        android:layout_marginRight="@dimen/hp_button_margin_h"
+        android:background="@color/colorAccent"
         android:onClick="map"
         android:text="Map"
-        android:textSize="16sp"
+        android:textSize="@dimen/hp_button_fontsize"
         android:textStyle="bold"
         android:typeface="monospace"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:fontFamily="monospace"
+        app:layout_constraintBottom_toTopOf="@+id/tournaments_button"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/top_50_button"
-        app:layout_constraintVertical_bias="0.144" />
+        app:layout_constraintTop_toBottomOf="@+id/top_50_button" />
 
     <Button
         android:id="@+id/tournaments_button"
-        style="@android:style/Widget.Button.Inset"
-        android:layout_width="363dp"
-        android:layout_height="46dp"
-        android:background="@android:color/holo_blue_dark"
-        android:fontFamily="monospace"
+        style="@style/hp_button_style"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/hp_button_margin_v"
+        android:layout_marginLeft="@dimen/hp_button_margin_h"
+        android:layout_marginRight="@dimen/hp_button_margin_h"
+        android:background="@color/colorAccent"
         android:onClick="tournaments"
         android:text="Tournaments"
-        android:textSize="18sp"
+        android:textSize="@dimen/hp_button_fontsize"
         android:textStyle="bold"
         android:typeface="monospace"
+        android:fontFamily="monospace"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.523"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/map_button"
-        app:layout_constraintVertical_bias="0.195" />
+        app:layout_constraintTop_toBottomOf="@+id/map_button" />
 </android.support.constraint.ConstraintLayout>
