--- a/Android/app/src/main/res/layout/activity_my_calendar.xml
+++ b/Android/app/src/main/res/layout/activity_my_calendar.xml
@@ -10,14 +10,13 @@
         android:id="@+id/webcal"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
-    >
+    />
 
-    </WebView>
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/new_meeting"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_margin="@dimen/fab_margin"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:src="@drawable/ic_add_black_24dp"
