--- a/Android/app/src/main/res/layout/activity_top50.xml
+++ b/Android/app/src/main/res/layout/activity_top50.xml
@@ -16,12 +16,13 @@
         android:id="@+id/top_50_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/title_margin_v"
+        android:layout_marginBottom="@dimen/title_margin_v"
         android:text="Top 50"
-        android:textColor="@android:color/holo_blue_dark"
-        android:textSize="18sp"
+        android:textColor="@color/colorAccent"
+        android:textSize="@dimen/title_fontsize"
         android:textStyle="bold"
         android:typeface="monospace"
-        android:layout_marginTop="10dp"
         app:layout_constraintBottom_toTopOf="@+id/top_50_filter"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -29,9 +30,11 @@
 
     <Spinner
         android:id="@+id/top_50_filter"
-        android:layout_width="368dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:popupBackground="@android:color/holo_blue_dark"
+        android:layout_marginLeft="@dimen/hp_button_margin_h"
+        android:layout_marginRight="@dimen/hp_button_margin_h"
+        android:popupBackground="@color/colorAccent"
         app:layout_constraintBottom_toTopOf="@+id/top_50_list"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -39,8 +42,10 @@
 
     <ExpandableListView
         android:id="@+id/top_50_list"
-        android:layout_width="373dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginLeft="@dimen/hp_button_margin_h"
+        android:layout_marginRight="@dimen/hp_button_margin_h"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
