--- a/Android/app/src/main/res/layout/activity_registration.xml
+++ b/Android/app/src/main/res/layout/activity_registration.xml
@@ -12,16 +12,14 @@
         android:layout_height="wrap_content"
         android:text="Register"
         android:textAlignment="center"
-        android:textColor="@android:color/holo_blue_dark"
-        android:textSize="18sp"
+        android:textColor="@color/colorAccent"
+        android:textSize="@dimen/title_fontsize"
         android:textStyle="bold"
         android:typeface="monospace"
-        tools:layout_editor_absoluteY="16dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/name_response"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="0.468" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/name_response"
@@ -34,9 +32,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/email_response"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="57dp" />
+        app:layout_constraintVertical_chainStyle="packed" />
 
     <EditText
         android:id="@+id/email_response"
@@ -48,9 +44,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/password_response"
-        app:layout_constraintTop_toBottomOf="@+id/name_response"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="196dp" />
+        app:layout_constraintTop_toBottomOf="@+id/name_response" />
 
     <EditText
         android:id="@+id/password_response"
@@ -62,9 +56,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/confirm_password"
-        app:layout_constraintTop_toBottomOf="@+id/email_response"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="239dp" />
+        app:layout_constraintTop_toBottomOf="@+id/email_response" />
 
     <EditText
         android:id="@+id/confirm_password"
@@ -76,23 +68,19 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/org_response"
-        app:layout_constraintTop_toBottomOf="@+id/password_response"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="282dp" />
+        app:layout_constraintTop_toBottomOf="@+id/password_response" />
 
     <EditText
         android:id="@+id/org_response"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/username_response"
         app:layout_constraintTop_toBottomOf="@+id/confirm_password"
-        android:hint="Organization"
-        tools:layout_editor_absoluteX="16dp"/>
+        android:hint="Organization" />
 
     <EditText
         android:id="@+id/username_response"
@@ -104,15 +92,14 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/org_response"
-        android:hint="Username"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="153dp" />
+        android:hint="Username" />
 
     <Button
+        style="@style/hp_button_style"
         android:id="@+id/register_enter_button"
-        android:layout_width="88dp"
-        android:layout_height="48dp"
-        android:background="@android:color/holo_blue_dark"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/colorAccent"
         android:text="Enter"
         android:textAlignment="center"
         android:textSize="16sp"
@@ -122,8 +109,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/username_response"
-        tools:layout_editor_absoluteX="146dp"
-        tools:layout_editor_absoluteY="352dp" />
+        app:layout_constraintTop_toBottomOf="@+id/username_response" />
 
 </android.support.constraint.ConstraintLayout>
